--- a/index.html
+++ b/index.html
@@ -24,169 +24,187 @@
   <link rel="stylesheet" href="./css/5_block.css">
   <link rel="stylesheet" href="./css/6_exception.css">
 </head>
-<body class="grid:hero-full gap:sm p:sm"
+<body class="fullscreen scroll-no"
   data-persist="{include: /^prst_/}"
   data-signals:prst_theme="'./css/2_theme-default.css'"
   data-signals:prst_mode="'system'">
-  
-  <header class="card flex:spread-row align:center p:md" style="grid-column: 1 / -1;">
-    <h1 class="text:lg" style="font-weight: 600;">CUBE CSS</h1>
-    <nav class="flex:cluster gap:xs">
-      <button sz="sm">Home</button>
-      <button var="gho" sz="sm">Docs</button>
-      <button var="gho" sz="sm">GitHub</button>
-    </nav>
-  </header>
-
-  <nav class="card flex:stack gap:sm p:md">
-    <h2 class="text:md">Navigation</h2>
-    <button sz="sm">Dashboard</button>
-    <button var="gho" sz="sm">Components</button>
-    <button var="gho" sz="sm">Settings</button>
-  </nav>
-
-  <main class="card flex:stack gap:lg p:lg">
-    <h2 class="text:xl" style="font-weight: 600;">Component Showcase</h2>
     
-    <section class="flex:stack gap:sm">
-      <h3 class="text:md">Buttons</h3>
-      <div class="flex:cluster gap:sm">
-        <button>Primary</button>
-        <button var="sec">Secondary</button>
-        <button var="out">Outline</button>
-        <button var="gho">Ghost</button>
-        <button var="wrn">Warning</button>
-        <button var="dgr">Danger</button>
+ <div class="grid:hero gap:xs"> 
+    <header class="card flex:spread-row align:center p:xs" style="grid-column: 1 / -1;">
+      <div class="nowrap">
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 48 48"><path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="4" d="M15.5 9L7 14v20l8.5 5l8.5 5l8.5-5l8.5-5V14l-8.5-5L24 4zM24 4v20m17 10L24 24M7 34l17-10m0 20V34m17-20l-8 5M7 14l8 5"/></svg>
+        <h1>Cube CSS</h1>
       </div>
-      <div class="flex:cluster gap:sm">
-        <a class="btn" href="#">Link as Button</a>
-      </div>
-    </section>
+      <nav class="flex:cluster gap:xs">
+        <button sz="sm">Home</button>
+        <button var="gho" sz="sm">Docs</button>
+        <button var="gho" sz="sm">GitHub</button>
+      </nav>
+    </header>
 
-    <section class="flex:stack gap:sm">
-      <h3 class="text:md">Button Sizes</h3>
-      <div class="flex:cluster align:center gap:sm">
-        <button sz="sm">Small</button>
-        <button>Default</button>
-        <button sz="lg">Large</button>
-      </div>
-    </section>
+    <nav class="scroll-y card flex:stack ">
+      <button sz="sm">Dashboard</button>
+      <button var="gho" sz="sm">Components</button>
+      <button var="gho" sz="sm">Settings</button>
+    </nav>
 
-    <section class="flex:stack gap:sm">
-      <h3 class="text:md">Button States</h3>
-      <div class="flex:cluster gap:md">
-        <button st="lod">Loading</button>
-        <button st="dis">Disabled</button>
-      </div>
-    </section>
+    <main class="scroll-y card flex:stack gap:lg p:lg">
+      <h2 class="text:xl" style="font-weight: 600;">Component Showcase</h2>
+      
+      <section class="flex:stack gap:sm">
+        <h3 class="text:md">Buttons</h3>
+        <div class="flex:cluster gap:sm">
+          <button>Primary</button>
+          <button var="sec">Secondary</button>
+          <button var="out">Outline</button>
+          <button var="gho">Ghost</button>
+          <button var="wrn">Warning</button>
+          <button var="dgr">Danger</button>
+        </div>
+        <div class="flex:cluster gap:sm">
+          <a class="btn" href="#">Link as Button</a>
+        </div>
+      </section>
 
-    <section class="flex:stack gap:sm">
-      <h3 class="text:md">Input Groups</h3>
-      <div class="flex:cluster gap:lg align:start">
-        <div class="input-group">
-          <span class="feedback"></span>
-          <label>Username</label>
-          <input type="text" placeholder="Enter username" />
+      <section class="flex:stack gap:sm">
+        <h3 class="text:md">Button Sizes</h3>
+        <div class="flex:cluster align:center gap:sm">
+          <button sz="sm">Small</button>
+          <button>Default</button>
+          <button sz="lg">Large</button>
         </div>
-        <div class="input-group">
-          <span class="feedback">Looks good!</span>
-          <label>Email</label>
-          <input type="email" placeholder="email@example.com" st="suc" />
-        </div>
-        <div class="input-group">
-          <span class="feedback">Passwords don't match</span>
-          <label>Password</label>
-          <input type="password" placeholder="Enter password" st="err" />
-        </div>
-        <div class="input-group">
-          <span class="feedback">Password is weak</span>
-          <label>Confirm</label>
-          <input type="password" placeholder="Confirm password" st="wrn" />
-        </div>
-      </div>
-    </section>
+      </section>
 
-    <section class="flex:stack gap:sm">
-      <h3 class="text:md">Pills</h3>
-      <div class="flex:cluster gap:sm">
-        <span class="pill">Primary</span>
-        <span class="pill" var="sec">Secondary</span>
-        <span class="pill" var="wrn">Warning</span>
-        <span class="pill" var="dgr">Danger</span>
-        <span class="pill" var="inf">Info</span>
-        <span class="pill" var="suc">Success</span>
-        <span class="pill" var="out">Outline</span>
-      </div>
-      <div class="flex:cluster gap:sm">
-        <span class="pill">Removable <span class="close">×</span></span>
-        <span class="pill" var="inf">Tag <span class="close">×</span></span>
-        <span class="pill" var="suc">Done <span class="close">×</span></span>
-      </div>
-    </section>
+      <section class="flex:stack gap:sm">
+        <h3 class="text:md">Button States</h3>
+        <div class="flex:cluster gap:md">
+          <button st="lod">Loading</button>
+          <button st="dis">Disabled</button>
+        </div>
+      </section>
 
-    <section class="flex:stack gap:sm">
-      <h3 class="text:md">Cards</h3>
-      <div class="flex:cluster gap:sm">
-        <div class="card" style="width: 140px;">
-          <p class="text:sm">Default</p>
-        </div>
-        <div class="card" var="pri" style="width: 140px;">
-          <p class="text:sm">Primary</p>
-        </div>
-        <div class="card" var="sec" style="width: 140px;">
-          <p class="text:sm">Secondary</p>
-        </div>
-        <div class="card" var="wrn" style="width: 140px;">
-          <p class="text:sm">Warning</p>
-        </div>
-        <div class="card" var="dgr" style="width: 140px;">
-          <p class="text:sm">Danger</p>
-        </div>
-        <div class="card" var="out" style="width: 140px;">
-          <p class="text:sm">Outline</p>
-        </div>
-        <div class="card" var="gho" style="width: 140px;">
-          <p class="text:sm">Ghost</p>
-        </div>
-        <div class="card" var="glass" style="width: 140px;">
-          <p class="text:sm">Glass</p>
-        </div>
-      </div>
-    </section>
-  </main>
+      <section class="flex:stack gap:sm">
+        <h3 class="text:md">Form Layout</h3>
+        <form class="form">
+          <!-- Full width -->
+          <label class="input-group" style="width: 100cqi;">
+            Email <span class="feedback">Looks good!</span>
+            <input type="email" placeholder="email@example.com" st="suc" />
+          </label>
+          <!-- Two equal columns -->
+          <label class="input-group" style="width: calc(50cqi - var(--space-md) / 2);">
+            First Name <span class="feedback"></span>
+            <input type="text" placeholder="Enter first name" />
+          </label>
+          <label class="input-group" style="width: calc(50cqi - var(--space-md) / 2);">
+            Last Name <span class="feedback"></span>
+            <input type="text" placeholder="Enter last name" />
+          </label>
+          <!-- Two equal columns -->
+          <label class="input-group" style="width: calc(50cqi - var(--space-md) / 2);">
+            Password <span class="feedback">Passwords don't match</span>
+            <input type="password" placeholder="Enter password" st="err" />
+          </label>
+          <label class="input-group" style="width: calc(50cqi - var(--space-md) / 2);">
+            Confirm <span class="feedback">Password is weak</span>
+            <input type="password" placeholder="Confirm password" st="wrn" />
+          </label>
+          <!-- Asymmetric columns -->
+          <label class="input-group" style="width: calc(75cqi - var(--space-md) / 2);">
+            Card No. <span class="feedback"></span>
+            <input type="password" placeholder="#### #### #### ####" />
+          </label>
+          <label class="input-group" style="width: calc(25cqi - var(--space-md) / 2);">
+            Code<span class="feedback">Invalid</span>
+            <input type="password" placeholder="###" st="err" />
+          </label>
+        </form>
+      </section>
 
-  <aside class="card flex:stack gap:md p:md">
-    <h2 class="text:md">Settings</h2>
+      <section class="flex:stack gap:sm">
+        <h3 class="text:md">Pills</h3>
+        <div class="flex:cluster gap:sm">
+          <span class="pill">Primary</span>
+          <span class="pill" var="sec">Secondary</span>
+          <span class="pill" var="wrn">Warning</span>
+          <span class="pill" var="dgr">Danger</span>
+          <span class="pill" var="inf">Info</span>
+          <span class="pill" var="suc">Success</span>
+          <span class="pill" var="out">Outline</span>
+        </div>
+        <div class="flex:cluster gap:sm">
+          <span class="pill">Removable <span class="close">×</span></span>
+          <span class="pill" var="inf">Tag <span class="close">×</span></span>
+          <span class="pill" var="suc">Done <span class="close">×</span></span>
+        </div>
+      </section>
 
-    <section class="flex:stack gap:sm">
-      <h3 class="text:sm">Theme</h3>
-      <div class="flex:cluster gap:xs">
-        <button sz="sm"
-          data-attr:var="$prst_theme === './css/2_theme-default.css' ? false : 'gho'"
-          data-on:click="$prst_theme = './css/2_theme-default.css'">Default</button>
-      </div>
-    </section>
+      <section class="flex:stack gap:sm">
+        <h3 class="text:md">Cards</h3>
+        <div class="flex:cluster gap:sm">
+          <div class="card" style="width: 140px;">
+            <p class="text:sm">Default</p>
+          </div>
+          <div class="card" var="pri" style="width: 140px;">
+            <p class="text:sm">Primary</p>
+          </div>
+          <div class="card" var="sec" style="width: 140px;">
+            <p class="text:sm">Secondary</p>
+          </div>
+          <div class="card" var="wrn" style="width: 140px;">
+            <p class="text:sm">Warning</p>
+          </div>
+          <div class="card" var="dgr" style="width: 140px;">
+            <p class="text:sm">Danger</p>
+          </div>
+          <div class="card" var="out" style="width: 140px;">
+            <p class="text:sm">Outline</p>
+          </div>
+          <div class="card" var="gho" style="width: 140px;">
+            <p class="text:sm">Ghost</p>
+          </div>
+          <div class="card" var="glass" style="width: 140px;">
+            <p class="text:sm">Glass</p>
+          </div>
+        </div>
+      </section>
+    </main>
 
-    <section class="flex:stack gap:sm">
-      <h3 class="text:sm">Mode</h3>
-      <div class="flex:cluster gap:xs">
-        <button sz="sm"
-          data-attr:var="$prst_mode === 'light' ? false : 'gho'"
-          data-on:click="$prst_mode = 'light'">Light</button>
-        <button sz="sm"
-          data-attr:var="$prst_mode === 'system' ? false : 'gho'"
-          data-on:click="$prst_mode = 'system'">System</button>
-        <button sz="sm"
-          data-attr:var="$prst_mode === 'dark' ? false : 'gho'"
-          data-on:click="$prst_mode = 'dark'">Dark</button>
-      </div>
-    </section>
-  </aside>
+    <aside class=" scroll-y card flex:stack gap:md p:md">
+      <h2 class="text:md">Settings</h2>
 
-  <footer class="card flex:cluster justify:center gap:md p:md" style="grid-column: 1 / -1;">
-    <span class="text:sm">CUBE CSS Design System</span>
-    <span class="pill" var="out">v0.1</span>
-  </footer>
+      <section class="flex:stack gap:sm">
+        <h3 class="text:sm">Theme</h3>
+        <div class="flex:cluster gap:xs">
+          <button sz="sm"
+            data-attr:var="$prst_theme === './css/2_theme-default.css' ? false : 'gho'"
+            data-on:click="$prst_theme = './css/2_theme-default.css'">Default</button>
+          <button sz="sm"
+            data-attr:var="$prst_theme === './css/2_theme-cyber.css' ? false : 'gho'"
+            data-on:click="$prst_theme = './css/2_theme-cyber.css'">Cyber</button>
+        </div>
+      </section>
 
+      <section class="flex:stack gap:sm">
+        <h3 class="text:sm">Mode</h3>
+        <div class="flex:cluster gap:xs">
+          <button sz="sm"
+            data-attr:var="$prst_mode === 'light' ? false : 'gho'"
+            data-on:click="$prst_mode = 'light'">Light</button>
+          <button sz="sm"
+            data-attr:var="$prst_mode === 'system' ? false : 'gho'"
+            data-on:click="$prst_mode = 'system'">System</button>
+          <button sz="sm"
+            data-attr:var="$prst_mode === 'dark' ? false : 'gho'"
+            data-on:click="$prst_mode = 'dark'">Dark</button>
+        </div>
+      </section>
+    </aside>
+
+    <footer class="card flex:cluster gap:md justify:center" style="grid-column: 1 / -1;">
+      <span class="">CUBE CSS Design System</span>
+      <span class="pill" var="out">v0.1</span>
+    </footer>
+  </div>
 </body>
 </html>
