fix: hard set default in prod will be set on backend anyway and prst is a pro feature not great for a demo site

--- a/layout.html
+++ b/layout.html
@@ -26,8 +26,8 @@
 </head>
 <body class="fullscreen scroll-no"
   data-persist="{include: /^prst_/}"
-  data-signals:prst_theme__ifmissing="'./css/2_theme-default.css'"
-  data-signals:prst_mode__ifmissing="'system'">
+  data-signals:prst_theme="'./css/2_theme-default.css'"
+  data-signals:prst_mode="'system'">
     
   <div class="grid:hero gap:xs"> 
     <header class="card flex:spread-row align:center p:xs" style="grid-column: 1 / -1;">
@@ -43,8 +43,9 @@
     </header>
 
     <nav class="scroll-y card flex:stack ">
-      <a class="btn" href="index.html"  var="gho" sz="sm">Home</a>
-      <a class="btn" href="index.html"  var="gho" sz="sm">Components</a>
+      <a class="btn" href="index.html" var="gho" sz="sm">Home</a>
+      <a class="btn" href="components.html" var="gho" sz="sm">Components</a>
+      <a class="btn" href="demos.html" var="gho" sz="sm">Demos</a>
       <a class="btn" href="layout.html" var="pri" sz="sm">Layout</a>
     </nav>
 
