--- a/demos.html
+++ b/demos.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CUBE CSS</title>
+  <title>CUBE CSS Demos</title>
   
   <script type="module">
     try {
@@ -14,7 +14,6 @@
       console.log('Loaded datastar from CDN fallback');
     }
   </script>
-  <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
   
   <style>@layer reset, props, theme, composition, utility, block, exception;</style>
   <link rel="stylesheet" href="./css/0_reset.css">
@@ -37,32 +36,57 @@
         <h1>Cube CSS</h1>
       </div>
       <nav class="flex:cluster gap:xs">
-        <button sz="sm">Home</button>
+        <a class="btn" href="index.html" sz="sm">Home</a>
         <button var="gho" sz="sm">Docs</button>
         <button var="gho" sz="sm">GitHub</button>
       </nav>
     </header>
 
     <nav class="scroll-y card flex:stack ">
-      <a class="btn" href="index.html" var="pri" sz="sm">Home</a>
+      <a class="btn" href="index.html" var="gho" sz="sm">Home</a>
       <a class="btn" href="components.html" var="gho" sz="sm">Components</a>
-      <a class="btn" href="demos.html" var="gho" sz="sm">Demos</a>
+      <a class="btn" href="demos.html" var="pri" sz="sm">Demos</a>
       <a class="btn" href="layout.html" var="gho" sz="sm">Layout</a>
     </nav>
 
-    <main id="readme-content" class="scroll-y card flex:stack gap:lg p:lg">
-      <p>Loading README...</p>
+    <main class="scroll-y card flex:stack gap:lg p:lg">
+      <h2 class="text:xl" style="font-weight: 600;">Demos</h2>
+      
+      <section class="flex:stack gap:sm">
+        <h3 class="text:md">Calendar</h3>
+        <div class="card flex:stack gap:sm" style="max-width: 320px;">
+          <!-- Header: Month + Nav -->
+          <div class="flex:split-row">
+            <button class="icon-btn">←</button>
+            <span class="text:lg">January 2026</span>
+            <button class="icon-btn">→</button>
+          </div>
+
+          <!-- Day labels -->
+          <div style="display: grid; grid-template-columns: repeat(7, 1fr); text-align: center; gap: var(--space-xs);">
+            <span class="text:xs">Su</span>
+            <span class="text:xs">Mo</span>
+            <span class="text:xs">Tu</span>
+            <span class="text:xs">We</span>
+            <span class="text:xs">Th</span>
+            <span class="text:xs">Fr</span>
+            <span class="text:xs">Sa</span>
+          </div>
+
+          <!-- Date grid -->
+          <div style="display: grid; grid-template-columns: repeat(7, 1fr); text-align: center; gap: var(--space-xs);">
+            <!-- Empty cells for offset (Jan 2026 starts Thursday) -->
+            <span></span><span></span><span></span><span></span>
+            <!-- Dates -->
+            <span>1</span><span>2</span><span>3</span>
+            <span>4</span><span>5</span><span>6</span><span>7</span><span>8</span><span>9</span><span>10</span>
+            <span>11</span><span>12</span><span>13</span><span>14</span><span>15</span><span>16</span><span>17</span>
+            <span>18</span><span>19</span><span>20</span><span>21</span><span>22</span><span>23</span><span>24</span>
+            <span>25</span><span>26</span><span>27</span><span>28</span><span>29</span><span>30</span><span>31</span>
+          </div>
+        </div>
+      </section>
     </main>
-    <script>
-      fetch('README.md')
-        .then(res => res.text())
-        .then(md => {
-          document.getElementById('readme-content').innerHTML = marked.parse(md);
-        })
-        .catch(err => {
-          document.getElementById('readme-content').innerHTML = '<p>Failed to load README.md</p>';
-        });
-    </script>
 
     <aside class=" scroll-y card flex:stack gap:md p:md">
       <h2 class="text:md">Settings</h2>
