--- a/components.html
+++ b/components.html
@@ -30,16 +30,24 @@
   data-signals:prst_mode="'system'">
     
  <div class="grid:hero gap:xs"> 
-    <header class="card flex:spread-row align:center p:xs" style="grid-column: 1 / -1;">
+    <header class="card grid:lcr align:center p:xs" style="grid-column: 1 / -1;">
       <div class="nowrap">
+        <button class="icon-btn" sz="lg">
+          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-menu-icon lucide-menu"><path d="M4 5h16"/><path d="M4 12h16"/><path d="M4 19h16"/></svg>
+        </button>
         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 48 48"><path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="4" d="M15.5 9L7 14v20l8.5 5l8.5 5l8.5-5l8.5-5V14l-8.5-5L24 4zM24 4v20m17 10L24 24M7 34l17-10m0 20V34m17-20l-8 5M7 14l8 5"/></svg>
         <h1>Cube CSS</h1>
       </div>
-      <nav class="flex:cluster gap:xs">
-        <a class="btn" href="index.html" sz="sm">Home</a>
-        <button var="gho" sz="sm">Docs</button>
-        <button var="gho" sz="sm">GitHub</button>
-      </nav>
+      <div> </div>
+      <div class="flex:cluster gap:xs">
+        <a class="icon-btn" href="https://github.com/Deufel/cube">
+          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-github-icon lucide-github"><path d="M15 22v-4a4.8 4.8 0 0 0-1-3.5c3 0 6-2 6-5.5.08-1.25-.27-2.48-1-3.5.28-1.15.28-2.35 0-3.5 0 0-1 0-3 1.5-2.64-.5-5.36-.5-8 0C6 2 5 2 5 2c-.3 1.15-.3 2.35 0 3.5A5.403 5.403 0 0 0 4 9c0 3.5 3 5.5 6 5.5-.39.49-.68 1.05-.85 1.65-.17.6-.22 1.23-.15 1.85v4"/><path d="M9 18c-4.51 2-5-2-7-2"/></svg>
+        </a>
+        <span>|</span>
+        <button class="icon-btn" sz="lg">
+          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-menu-icon lucide-menu"><path d="M4 5h16"/><path d="M4 12h16"/><path d="M4 19h16"/></svg>
+        </button>
+      </div>
     </header>
 
     <nav class="scroll-y card flex:stack ">
