working: drawers generalized api in progress

--- a/index.html
+++ b/index.html
@@ -44,10 +44,12 @@
     </header>
 
     <nav class="scroll-y card flex:stack ">
-      <a class="btn" href="index.html" class="pri" class="sm">Home</a>
-      <a class="btn" href="components.html" class="gho" class="sm">Components</a>
-      <a class="btn" href="demos.html" class="gho" class="sm">Demos</a>
-      <a class="btn" href="layout.html" class="gho" class="sm">Layout</a>
+      <a class="btn" href="index.html" >Home</a>
+      <a class="btn" href="components.html" >Components</a>
+      <a class="btn" href="demos.html" >Demos</a>
+      <a class="btn" href="layout.html">Layout</a>
+      <a class="btn" href="colors.html">Colors</a>
+      <a class="btn" href="drawers.html">Drawers</a>
     </nav>
 
     <main id="readme-content" class="scroll-y card flex:stack gap:lg p:lg">
