update: colors.html layout

--- a/index.html
+++ b/index.html
@@ -52,10 +52,7 @@
     <div id="aside" data-init="@get('./partials/aside.html')"></div>
     <div id="aside-drawer"></div>
 
-    <footer style="grid-area: 3/2/4/4;" class="card flex:cluster gap:md justify:center">
-      <span class="">CUBE CSS Design System</span>
-      <span class="pill" class="out">v0.1</span>
-    </footer>
+    <div id="footer" data-init="@get('./partials/footer.html')"></div>
   </div>
 </body>
 </html>
