--- a/components.html
+++ b/components.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CUBE CSS Components</title>
+  <title>Components - Cube CSS</title>
   
   <script type="module">
     try {
@@ -11,10 +11,10 @@
       console.log('Loaded local datastar-pro.js');
     } catch {
       await import('https://cdn.jsdelivr.net/gh/starfederation/datastar@1.0.0-RC.7/bundles/datastar.js');
-      console.log('Loaded datastar from CDN fallback');
+      console.log('Loaded CDN datastar');
     }
   </script>
-  
+
   <style>@layer reset, props, theme, composition, utility, block, exception;</style>
   <link rel="stylesheet" href="./css/0_reset.css">
   <link rel="stylesheet" href="./css/1_props.css">
@@ -29,38 +29,15 @@
   data-signals:prst_theme="'./css/2_theme-default.css'"
   data-signals:prst_mode="'system'">
     
- <div class="grid:hero gap:xs"> 
-    <header class="card grid:lcr align:center p:xs" style="grid-column: 1 / -1;">
-      <div class="nowrap">
-        <button class="icon-btn lg">
-          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-menu-icon lucide-menu"><path d="M4 5h16"/><path d="M4 12h16"/><path d="M4 19h16"/></svg>
-        </button>
-        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 48 48"><path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="4" d="M15.5 9L7 14v20l8.5 5l8.5 5l8.5-5l8.5-5V14l-8.5-5L24 4zM24 4v20m17 10L24 24M7 34l17-10m0 20V34m17-20l-8 5M7 14l8 5"/></svg>
-        <h1>Cube CSS</h1>
-      </div>
-      <div> </div>
-      <div class="flex:cluster gap:xs">
-        <a class="icon-btn" href="https://github.com/Deufel/cube">
-          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-github-icon lucide-github"><path d="M15 22v-4a4.8 4.8 0 0 0-1-3.5c3 0 6-2 6-5.5.08-1.25-.27-2.48-1-3.5.28-1.15.28-2.35 0-3.5 0 0-1 0-3 1.5-2.64-.5-5.36-.5-8 0C6 2 5 2 5 2c-.3 1.15-.3 2.35 0 3.5A5.403 5.403 0 0 0 4 9c0 3.5 3 5.5 6 5.5-.39.49-.68 1.05-.85 1.65-.17.6-.22 1.23-.15 1.85v4"/><path d="M9 18c-4.51 2-5-2-7-2"/></svg>
-        </a>
-        <span>|</span>
-        <button class="icon-btn lg">
-          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-menu-icon lucide-menu"><path d="M4 5h16"/><path d="M4 12h16"/><path d="M4 19h16"/></svg>
-        </button>
-      </div>
-    </header>
+  <div class="grid:hero gap:xs">
+    <div id="header" data-init="@get('./partials/header.html')"></div>
+    <div id="nav" data-init="@get('./partials/nav.html')"></div>
+    <div id="nav-drawer"></div>
 
-    <nav class="scroll-y card flex:stack ">
-      <a class="btn" href="index.html" class="gho" class="sm">Home</a>
-      <a class="btn" href="components.html" class="pri" class="sm">Components</a>
-      <a class="btn" href="demos.html" class="gho" class="sm">Demos</a>
-      <a class="btn" href="layout.html" class="gho" class="sm">Layout</a>
-    </nav>
-
-    <main class="scroll-y card flex:stack gap:lg p:lg">
+    <main style="grid-area: 2/2/3/3;" class="scroll-y card flex:stack gap:lg p:lg">
       <h2 class="text:xl" style="font-weight: 600;">Component Showcase</h2>
       
-<section class="flex:stack gap:sm">
+      <section class="flex:stack gap:sm">
         <h3 class="text:md">Buttons</h3>
         <div class="flex:cluster gap:sm">
           <button>Primary</button>
@@ -250,15 +227,15 @@
         <h3 class="text:md">Tags</h3>
         <div class="flex:cluster gap:sm">
           <span class="tag">Default</span>
-          <span class="tag" class="inf">Info</span>
-          <span class="tag" class="suc">Success</span>
-          <span class="tag" class="wrn">Warning</span>
-          <span class="tag" class="dgr">Danger</span>
+          <span class="tag inf">Info</span>
+          <span class="tag suc">Success</span>
+          <span class="tag wrn">Warning</span>
+          <span class="tag dgr">Danger</span>
         </div>
         <div class="flex:cluster gap:sm">
           <span class="tag">Removable <span class="close">×</span></span>
-          <span class="tag" class="inf">Info <span class="close">×</span></span>
-          <span class="tag" class="suc">Done <span class="close">×</span></span>
+          <span class="tag inf">Info <span class="close">×</span></span>
+          <span class="tag suc">Done <span class="close">×</span></span>
         </div>
       </section>
 
@@ -268,66 +245,34 @@
           <div class="card" style="width: 140px;">
             <p class="text:sm">Default</p>
           </div>
-          <div class="card" class="pri" style="width: 140px;">
+          <div class="card pri" style="width: 140px;">
             <p class="text:sm">Primary</p>
           </div>
-          <div class="card" class="sec" style="width: 140px;">
+          <div class="card sec" style="width: 140px;">
             <p class="text:sm">Secondary</p>
           </div>
-          <div class="card" class="wrn" style="width: 140px;">
+          <div class="card wrn" style="width: 140px;">
             <p class="text:sm">Warning</p>
           </div>
-          <div class="card" class="dgr" style="width: 140px;">
+          <div class="card dgr" style="width: 140px;">
             <p class="text:sm">Danger</p>
           </div>
-          <div class="card" class="out" style="width: 140px;">
+          <div class="card out" style="width: 140px;">
             <p class="text:sm">Outline</p>
           </div>
-          <div class="card" class="gho" style="width: 140px;">
+          <div class="card gho" style="width: 140px;">
             <p class="text:sm">Ghost</p>
           </div>
-          <div class="card" class="glass" style="width: 140px;">
+          <div class="card glass" style="width: 140px;">
             <p class="text:sm">Glass</p>
           </div>
         </div>
       </section>
     </main>
 
-    <aside class=" scroll-y card flex:stack gap:md p:md">
-      <h2 class="text:md">Settings</h2>
-
-      <section class="flex:stack gap:sm">
-        <h3 class="text:sm">Theme</h3>
-        <div class="flex:cluster gap:xs">
-          <button class="sm"
-            data-attr:var="$prst_theme === './css/2_theme-default.css' ? false : 'gho'"
-            data-on:click="$prst_theme = './css/2_theme-default.css'">Default</button>
-          <button class="sm"
-            data-attr:var="$prst_theme === './css/2_theme-cyber.css' ? false : 'gho'"
-            data-on:click="$prst_theme = './css/2_theme-cyber.css'">Cyber</button>
-        </div>
-      </section>
-
-      <section class="flex:stack gap:sm">
-        <h3 class="text:sm">Mode</h3>
-        <div class="flex:cluster gap:xs">
-          <button class="sm"
-            data-attr:var="$prst_mode === 'light' ? false : 'gho'"
-            data-on:click="$prst_mode = 'light'">Light</button>
-          <button class="sm"
-            data-attr:var="$prst_mode === 'system' ? false : 'gho'"
-            data-on:click="$prst_mode = 'system'">System</button>
-          <button class="sm"
-            data-attr:var="$prst_mode === 'dark' ? false : 'gho'"
-            data-on:click="$prst_mode = 'dark'">Dark</button>
-        </div>
-      </section>
-    </aside>
-
-    <footer class="card flex:cluster gap:md justify:center" style="grid-column: 1 / -1;">
-      <span class="">CUBE CSS Design System</span>
-      <span class="pill" class="out">v0.1</span>
-    </footer>
+    <div id="aside" data-init="@get('./partials/aside.html')"></div>
+    <div id="aside-drawer"></div>
+    <div id="footer" data-init="@get('./partials/footer.html')"></div>
   </div>
 </body>
 </html>
