--- a/demos.html
+++ b/demos.html
@@ -73,8 +73,7 @@
       </section>
     </main>
 
-    <div id="aside" data-init="@get('./partials/aside.html')"></div>
-    <div id="aside-drawer"></div>
+    <div id="aside-drawer" data-init="@get('./partials/aside.html')"></div>
     <div id="footer" data-init="@get('./partials/footer.html')"></div>
   </div>
 </body>
