--- a/index.html
+++ b/index.html
@@ -49,8 +49,7 @@
         });
     </script>
 
-    <div id="aside" data-init="@get('./partials/aside.html')"></div>
-    <div id="aside-drawer"></div>
+    <div id="aside-drawer" data-init="@get('./partials/aside.html')"></div>
 
     <div id="footer" data-init="@get('./partials/footer.html')"></div>
   </div>
