cleanup api and icon button

--- a/colors.html
+++ b/colors.html
@@ -16,13 +16,13 @@
   </script>
 
   <style>@layer reset, props, theme, composition, utility, block, exception;</style>
-  <link rel="stylesheet" href="css/0_reset.css">
-  <link rel="stylesheet" href="css/1_props.css">
-  <link id="theme-link" rel="stylesheet" data-attr:href="$prst_theme" href="css/2_theme-default.css">
-  <link rel="stylesheet" href="css/3_composition.css">
-  <link rel="stylesheet" href="css/4_utility.css">
-  <link rel="stylesheet" href="css/5_block.css">
-  <link rel="stylesheet" href="css/6_exception.css">
+  <link rel="stylesheet" href="./css/0_reset.css">
+  <link rel="stylesheet" href="./css/1_props.css">
+  <link id="theme-link" rel="stylesheet" data-attr:href="$prst_theme" href="./css/2_theme-default.css">
+  <link rel="stylesheet" href="./css/3_composition.css">
+  <link rel="stylesheet" href="./css/4_utility.css">
+  <link rel="stylesheet" href="./css/5_block.css">
+  <link rel="stylesheet" href="./css/6_exception.css">
   <style>
     .swatch { width: 48px; height: 48px; border-radius: var(--radius-sm); border: 1px solid var(--border-subtle); }
     .swatch-sm { width: 32px; height: 32px; border-radius: var(--radius-sm); border: 1px solid var(--border-subtle); }
