--- a/layout.html
+++ b/layout.html
@@ -16,13 +16,13 @@
   </script>
 
   <style>@layer reset, props, theme, composition, utility, block, exception;</style>
-  <link rel="stylesheet" href="css/0_reset.css">
-  <link rel="stylesheet" href="css/1_props.css">
+  <link rel="stylesheet" href="./css/0_reset.css">
+  <link rel="stylesheet" href="./css/1_props.css">
   <link rel="stylesheet" data-attr:href="$prst_theme">
-  <link rel="stylesheet" href="css/3_composition.css">
-  <link rel="stylesheet" href="css/4_utility.css">
-  <link rel="stylesheet" href="css/5_block.css">
-  <link rel="stylesheet" href="css/6_exception.css">
+  <link rel="stylesheet" href="./css/3_composition.css">
+  <link rel="stylesheet" href="./css/4_utility.css">
+  <link rel="stylesheet" href="./css/5_block.css">
+  <link rel="stylesheet" href="./css/6_exception.css">
 </head>
 <body class="fullscreen scroll-no"
   data-persist="{include: /^prst_/}"
